[gd_scene load_steps=4 format=3 uid="uid://c1x5lrnrq51io"]

[ext_resource type="Script" path="res://scenes/objects/save_token_slot.gd" id="1_10db5"]
[ext_resource type="PackedScene" uid="uid://c83iuigvvkkp0" path="res://scenes/objects/cell.tscn" id="1_dk7oq"]
[ext_resource type="Texture2D" uid="uid://1s3pj5qjllfh" path="res://images/tokens/save_token_back.png" id="1_sjpeq"]

[node name="SaveTokenSlot" type="Node2D" node_paths=PackedStringArray("cell_board", "background")]
script = ExtResource("1_10db5")
cell_board = NodePath("Area2D")
background = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.6)
texture = ExtResource("1_sjpeq")

[node name="Area2D" parent="." instance=ExtResource("1_dk7oq")]

[connection signal="cell_entered" from="Area2D" to="." method="_on_area_2d_cell_entered"]
[connection signal="cell_exited" from="Area2D" to="." method="_on_area_2d_cell_exited"]
[connection signal="cell_selected" from="Area2D" to="." method="_on_area_2d_cell_selected"]
